fix: update configuration to support NAT in x509 certs

--- a/worker.yaml
+++ b/worker.yaml
@@ -15,7 +15,7 @@
   become: yes
   tasks:
     - name: join cluster
-      shell: "{{ hostvars['master'].join_command }} >> node_joined.txt"
+      shell: "sudo {{ hostvars['master'].join_command }} >> node_joined.txt"
       args:
         chdir: $HOME
         creates: node_joined.txt
